# grapher

./: codegen.hpp  equations.hpp  execute.hpp  grapher.cpp  imgui.ini  meson.build  meson_options.txt  parse.hpp  setup_meson.bat  tokenize.hpp
msvc/ogl_app/: ogl_app.sln  ogl_app.vcxproj  ogl_app.vcxproj.filters
shaders/: circle_render.glsl  common.glsl  grid.glsl  lines.glsl  text.glsl
